# Imagina

./: .gitignore  ArbitraryPrecision.h  CMakeLists.txt  Computation.cpp  Computation.h  Configuration.h  Evaluator.cpp  Evaluator.h  FeatureFinder.cpp  FeatureFinder.h  File.cpp  File.h  FloatExp.h  FloatExpVector4.h  FractalContext.cpp  FractalContext.h  GLUtils.cpp  GLUtils.h  Global.cpp  Global.h  HInfLAEvaluator.cpp  HInfLAEvaluator.h  Includes.h  JitEvaluator.cpp  JitEvaluator.h  MainWindow.cpp  MainWindow.h  Makefile  PixelManager.cpp  PixelManager.h  PlatformDependent.cpp  PlatformDependent.h  Readme.md  Render.cpp  Render.h  Resource.h  Resource.rc  Types.h  Vector4.h  main.cpp  (+1 more)
Encoder/: Encoder.cpp  Encoder.h  Memory.cpp  Memory.h  Register.h  XMMComplex.cpp  XMMComplex.h
